@@ -29,6 +29,7 @@ The following bugs are resolved with this release:
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
   [33185] Fix double-free after allocation failure in regcomp
   [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
+  [33361] nss: Group merge does not react to ERANGE during merge
 
 Version 2.40
 
